--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ charset-normalizer==2.1.1
 colorama==0.4.6
 coloredlogs==14.3
 docopt==0.6.2
+exceptiongroup==1.1.0
 fs==2.4.16
 h11==0.14.0
 humanfriendly==10.0
@@ -32,4 +33,5 @@ trio==0.22.0
 trio-websocket==0.9.2
 urllib3==1.26.13
 verboselogs==1.7
+wget==3.2
 wsproto==1.2.0
