--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ pyreadline3==3.4.1
 PySocks==1.7.1
 python-dateutil==2.8.2
 python-dotenv==0.21.0
+pytube==12.1.2
 requests==2.28.1
 selenium==4.7.2
 six==1.16.0
